# otscan

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
otscan/: __init__.py  cli.py  scanner.py
otscan/agentic/: analyzer.py
otscan/credentials/: __init__.py  checker.py  database.py
otscan/cve/: __init__.py  database.py
otscan/discovery/: __init__.py  network.py
otscan/protocols/: __init__.py  bacnet.py  base.py  codesys.py  dnp3.py  ethernetip.py  fins.py  hartip.py  iec104.py  iec61850.py  modbus.py  niagara_fox.py  opcua.py  profinet.py  s7comm.py
otscan/reporting/: __init__.py  report.py
otscan/services/: __init__.py  detector.py
otscan/utils/: helpers.py
otscan/wireless/: __init__.py  rf_protocols.py
sim/: ot_simulator.py
tests/: test_scanner.py
